# LSFR

./: CMakeLists.txt  README.md
include/: LFSR.h  Test.h
src/: LFSR.cpp  LFSRCore.cpp  Test.cpp
